--- a/src/style.css
+++ b/src/style.css
@@ -31,10 +31,11 @@ body {
   width: 100%;
   height: 5rem;
   background-color: #181818;
-  position: absolute;
+  position: fixed;
   top: 0;
   justify-content: center;
   align-items: center;
+  z-index: 999;
 }
 
 .mobile-menu-icon {
